--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,20 @@
 #root {
   flex: 1;
   padding: 16px;
-  max-width: 768px;
-  display: flex;
+  /* max-width: 768px; */
+  /* display: flex; */
   flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
+  /* margin: 0 auto; */
+  /* text-align: center; */
 }
 
 #soc-med {
   margin: 16px;
   display: flex;
   flex: 1;
-  align-items: center;
+  /* align-items: center; */
   flex-basis: 64px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .soc-med-img {
@@ -23,39 +23,86 @@
 }
 
 footer {
-  text-align: center;
+  /* text-align: center; */
   font-size: 8px;
+  padding: 16px;
+  clear: both;
 }
 
 #apps {
   margin-top: 16px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
 }
 
-.app-img {
+.action-msg {
+  padding-top: 16px;
+  clear: both;
+}
+
+.app-desc {
+  padding: 0 !important;
+}
+
+.app-desc div {
+  clear: both;
+  padding: 4px 0;
+}
+
+.app-img, .site-img {
   border-radius: 16px;
 }
 
-.app-img img {
+.app-img img, .site-img img {
   border-radius: 24px;
   height: 120px;
 }
 
-#apps div {
+.site-img {
+  float: left;
+  padding-right: 16px;
+}
+
+#apps > div {
+  float: left;
   padding: 0 16px;
+}
+
+.site-block {
+  clear: both;
 }
 
 .stores {
   width: 120px;
 }
 
-.playstore {
-  width: 136px !important;
+.app-block {
+  width: 150px;
 }
 
 .app-title {
-  margin: 8px 0;
+  margin: 4px 0;
+  margin-bottom: 0px;
+}
+
+.site-block {
+  padding: 16px 0;
+}
+
+.site-block:first-of-type {
+  padding-top: 0px;
+}
+
+.site-block:last-of-type {
+  padding-bottom: 0px;
+}
+
+.site-desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 120px;
+  font-weight: bold;
+}
+
+#myname {
+  font-weight: bold;
 }
