add profile picture to website

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,17 @@
   /* text-align: center; */
 }
 
+#root header {
+  text-align: center;
+}
+
+#profile-picture {
+  border-radius: 50%;
+  height: 160px;
+  border: 2px solid black;
+  margin: 16px;
+}
+
 #soc-med {
   margin: 16px;
   display: flex;
