--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,7 @@
 #root {
   flex: 1;
   padding: 16px;
-  /* max-width: 768px; */
-  /* display: flex; */
   flex-direction: column;
-  /* margin: 0 auto; */
-  /* text-align: center; */
 }
 
 #root header {
@@ -199,4 +195,19 @@ footer {
 .edu-inst {
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: white
+  }
+
+  a {
+    color:cadetblue
+  }
+
+  img[alt="InDome HK"], img[alt="GitHub"], img[alt="Instagram"] {
+    filter: brightness(0) invert(1);
+  }
 }
